2008-12-29  Claude Paroz  <claude@2xlibre.net>

	* stats/models.py:
	* stats/utils.py: Replace commands.* by more modern subprocess.* Run each
	shell command through new function utils.run_shell_command.

2008-12-27  Claude Paroz  <claude@2xlibre.net>

	* languages/views.py: Add select_related to reduce db access.
	* stats/models.py: Name related table unless 'language' is not fetched as
	it is a null=True relation.
	* teams/models.py: Add custom manager and add a method to fetch teams with
	roles prefilled. This dramatically reduces db access.
	* teams/views.py: Use new TeamManager function to fetch teams.

2008-12-26  Claude Paroz  <claude@2xlibre.net>

	* stats/models.py: Don't encode ampersands in the source, but later in
	HTML rendering. Patch by Friedel Wolff.
	Fixes #565719.

2008-12-26  Claude Paroz  <claude@2xlibre.net>

	* stats/models.py: Optimizations to reduce DB queries.

2008-12-25  Claude Paroz  <claude@2xlibre.net>

	* languages/urls.py:
	* languages/views.py: language_release shows either ui or doc.
	* media/css/main.css: Some more classes for vertimus_detail.html.
	* stats/models.py: Split get_lang_stats and get_lang_stats_by_type,
	slightly simplified function. Link stat object to corresponding StateDb.
	* templates/languages/language_release.html: Remove team details and show
	only ui or doc, not both.
	* templates/languages/language_release_stats.html: Link to vertimus_detail
	instead of module. Add columns for state and state_date.
	* templates/people/person_detail.html: Reverted Stéphane's previous
	commit. Didn't work.
	* templates/release_detail.html: Link separately ui and doc for language
	release.
	* templates/teams/team_detail.html: Link separately ui and doc. Reactivate
	team membership display.
	* templates/vertimus/vertimus_detail.html: Link back to release. General
	layout adjustments.
	* vertimus/models.py: Add missing 'created' property. New get_filename
	method.

2008-12-24  Claude Paroz  <claude@2xlibre.net>
